Document cross-compatibility with SimpleJavaTemplates in README
Now that DurableAgent.premain auto-chains the SimpleJavaTemplates agent
when it finds it on the classpath, users no longer need two -javaagent
flags to use the two libraries together. Add a short trailing section
to the README explaining the one-flag usage pattern.

https://claude.ai/code/session_016Z8kWNz2hsTBsMRj18YMYL